fix: fix CI error